// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing src/pages/Login/index.tsx Testing jumbotron firstSection text-center with isSignedIn = false 1`] = `
<div>
  <div
    className="jumbotron firstSection text-center"
  >
    <h1
      className="card-title h1 my-5"
    >
      Login
    </h1>
    <form
      className=""
    >
      <div
        className="form-group"
      >
        <label
          className="blue-text my-3 font-weight-bold form-label"
        >
          Email
        </label>
        <input
          className="form-control"
          id="email"
          placeholder="Enter email"
          required={true}
          type="email"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="blue-text my-3 font-weight-bold form-label"
        >
          Password
        </label>
        <input
          className="form-control"
          id="password"
          placeholder="Password"
          required={true}
          type="password"
        />
      </div>
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 pl-4 pr-4 btn mr-3 btn-blue waves-effect"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2"
        >
          Login
        </span>
        <span
          className="MuiTouchRipple-root-30"
        />
      </button>
      <p />
      <div
        id="firebaseui_container"
      />
    </form>
  </div>
</div>
`;

exports[`Testing src/pages/Login/index.tsx Testing jumbotron firstSection text-center with isSignedIn = true 1`] = `
<div>
  <div
    className="jumbotron firstSection text-center"
  >
    <h1
      className="card-title h1 my-5"
    >
      Login
    </h1>
    <form
      className=""
    >
      <div
        className="form-group"
      >
        <label
          className="blue-text my-3 font-weight-bold form-label"
        >
          Email
        </label>
        <input
          className="form-control"
          id="email"
          placeholder="Enter email"
          required={true}
          type="email"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="blue-text my-3 font-weight-bold form-label"
        >
          Password
        </label>
        <input
          className="form-control"
          id="password"
          placeholder="Password"
          required={true}
          type="password"
        />
      </div>
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 pl-4 pr-4 btn mr-3 btn-blue waves-effect"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2"
        >
          Login
        </span>
        <span
          className="MuiTouchRipple-root-30"
        />
      </button>
      <p />
      <div>
        <button
          className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-2"
          >
            Sign-out
          </span>
          <span
            className="MuiTouchRipple-root-30"
          />
        </button>
        <button
          className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-2"
          >
            Delete account
          </span>
          <span
            className="MuiTouchRipple-root-30"
          />
        </button>
      </div>
    </form>
  </div>
</div>
`;
